--- a/.github/workflows/newaccount.yaml
+++ b/.github/workflows/newaccount.yaml
@@ -16,8 +16,8 @@ on:
         description: 'Environment'
         required: true
         type: string
-      eks_control_private:
-        description: 'EKS Control Plane Private Subnet CIDR'
+      eks_control_public:
+        description: 'EKS Control Plane publically available'
         required: true
         type: boolean
       db_subnet:
